Refactor Galang contract to use bytes32 for identifiers and update related functions; add js-sha3 dependency

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "hardhat": "^2.22.6"
   },
   "dependencies": {
-    "bignumber.js": "^9.1.2"
+    "bignumber.js": "^9.1.2",
+    "js-sha3": "^0.9.3"
   }
 }
